# SpireCV

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build_on_jetson.sh  build_on_x86_cuda.sh  build_on_x86_intel.sh
algorithm/: sv_algorithm_base.cpp
algorithm/color_line/: sv_color_line.cpp
algorithm/common_det/: sv_common_det.cpp
algorithm/common_det/cuda/: common_det_cuda_impl.cpp  common_det_cuda_impl.h
algorithm/common_det/cuda/yolov7/: config.h  model.cpp  model.h  postprocess.cpp  postprocess.h
algorithm/common_det/intel/: common_det_intel_impl.cpp  common_det_intel_impl.h
algorithm/ellipse_det/: ellipse_detector.cpp  ellipse_detector.h
algorithm/landing_det/: sv_landing_det.cpp
algorithm/landing_det/cuda/: landing_det_cuda_impl.cpp  landing_det_cuda_impl.h
algorithm/landing_det/intel/: landing_det_intel_impl.cpp  landing_det_intel_impl.h
algorithm/mde/: sv_depth_est.cpp
algorithm/mde/cuda/: depth_est_cuda_impl.cpp  depth_est_cuda_impl.h  utils.h
algorithm/mot/: sv_mot.cpp
algorithm/mot/bytetrack/: BYTETracker.cpp  BYTETracker.h  BytekalmanFilter.cpp  BytekalmanFilter.h  STrack.cpp  STrack.h  dataType.h  utils.cpp
algorithm/mot/sort/: sort.cpp  sort.h
algorithm/sot/: sv_sot.cpp
algorithm/sot/ocv470/: sot_ocv470_impl.cpp  sot_ocv470_impl.h
algorithm/tracking/: sv_tracking.cpp
algorithm/tracking/ocv470/: tracking_ocv470_impl.cpp
algorithm/veri/: sv_veri_det.cpp
algorithm/veri/cuda/: veri_det_cuda_impl.cpp  veri_det_cuda_impl.h
algorithm/veri/intel/: veri_det_intel_impl.cpp  veri_det_intel_impl.h
gimbal_ctrl/: sv_gimbal.cpp  sv_gimbal_io.hpp
gimbal_ctrl/IOs/serial/include/serial/: serial.h
gimbal_ctrl/driver/src/: amov_gimabl.cpp  amov_gimbal.h  amov_gimbal_factory.cpp  amov_gimbal_interface.cpp  amov_gimbal_interface_c.cpp  amov_gimbal_private.h  amov_gimbal_realize.cpp  amov_gimbal_struct.h  amov_tool.h
gimbal_ctrl/driver/src/AT10/: AT10_gimbal_crc32.h  AT10_gimbal_driver.cpp  AT10_gimbal_driver.h  AT10_gimbal_funtion.cpp  AT10_gimbal_struct.h
gimbal_ctrl/driver/src/FIFO/: Ring_Fifo.cc  Ring_Fifo.cpp  Ring_Fifo.h
gimbal_ctrl/driver/src/G1/: g1_gimbal_crc32.h  g1_gimbal_driver.cpp  g1_gimbal_driver.h  g1_gimbal_funtion.cpp  g1_gimbal_struct.h
gimbal_ctrl/driver/src/G2/: g2_gimbal_crc.h  g2_gimbal_driver.cpp  g2_gimbal_driver.h  g2_gimbal_funtion.cpp  g2_gimbal_iap_funtion.cpp  g2_gimbal_struct.h
gimbal_ctrl/driver/src/GX40/: GX40_gimbal_crc16.h  GX40_gimbal_driver.cpp  GX40_gimbal_driver.h  GX40_gimbal_funtion.cpp  GX40_gimbal_struct.h
gimbal_ctrl/driver/src/Q10f/: Q10f_gimbal_crc32.h  Q10f_gimbal_driver.cpp  Q10f_gimbal_driver.h  Q10f_gimbal_funtion.cpp  Q10f_gimbal_struct.h
gimbal_ctrl/driver/src/amovGimbal/: amov_gimbal.h  amov_gimbal_c.h  amov_gimbal_struct.h
include/: sv_algorithm_base.h  sv_color_line.h  sv_common_det.h  sv_core.h  sv_depth_est.h  sv_gimbal.h  sv_landing_det.h  sv_mot.h  sv_tracking.h  sv_veri_det.h  sv_video_base.h  sv_video_input.h  sv_video_output.h  sv_world.h
params/a-params/: sv_algorithm_params.json  sv_algorithm_params_1280_wo_mask.json  sv_algorithm_params_640_w_mask.json  sv_algorithm_params_640_wo_mask.json  sv_algorithm_params_coco_1280.json  sv_algorithm_params_coco_640.json  sv_algorithm_params_csrt.json  sv_algorithm_params_kcf.json  sv_algorithm_params_nano.json  sv_algorithm_params_siamrpn.json
params/c-params/: calib_webcam_1280x720.yaml  calib_webcam_1920x1080.yaml
samples/: SpireCVDet.cpp  SpireCVSeg.cpp
samples/calib/: calibrate_camera_charuco.cpp  create_marker.cpp
samples/demo/: aruco_detection.cpp  camera_reading.cpp  color_line_detect.cpp  common_object_detection.cpp  detection_with_clicked_tracking.cpp  ellipse_detection.cpp  eval_MOT_metric.cpp  gimbal_detection_with_clicked_tracking.cpp  gimbal_landing_marker_detection.cpp  gimbal_udp_detection_info_sender.cpp  landing_marker_detection.cpp  mon_depth_estimation.cpp  multiple_object_tracking.cpp  single_object_tracking.cpp  udp_detection_info_receiver.cpp  udp_detection_info_receiver_by_airborne.cpp  udp_detection_info_sender.cpp  veri.cpp  video_saving.cpp  video_streaming.cpp
samples/test/: eval_fps_on_video.cpp  gimbal_test.cpp
samples/test/eval_mAP_on_coco_val/: coco_eval.py  eval_mAP_on_coco_val.cpp  pd2cocojson.py
samples/test/mot_metrics/: eval_mot_metric_gt.sh  run_mot_challenge.py  write_val_seqmap.py
scripts/: model_sync.py
scripts/common/: configs-downloading.sh  download_test_videos.sh  ffmpeg425-install.sh  gst-install-orin.sh  models-converting.sh  models-downloading.sh  opencv470-install.sh
scripts/jetson/: gst-install-orin.sh  gst-install.sh  opencv470-install.sh  opencv470-jetpack511-cuda-install.sh  opencv470-jetpack511-install.sh
scripts/test/: test_fps.sh  test_gimbal.sh
scripts/x86-cuda/: ffmpeg425-install.sh  gst-install.sh  opencv470-cuda-install.sh  ubuntu1804-cuda-cudnn-11-1.sh  ubuntu2004-cuda-cudnn-11-6.sh  x86-gst-install.sh  x86-opencv470-cuda-install.sh  x86-opencv470-install.sh
scripts/x86-intel/: ffmpeg-install.sh  libva-install-gst.sh  libva-install.sh  opencl-vaapi-install.sh  opencv470-intel-install.sh  openvino-install.sh  zlm-server-install.sh
utils/: gason.cpp  gason.h  sv_crclib.cpp  sv_crclib.h  sv_util.cpp  sv_util.h
video_io/: sv_video_base.cpp  sv_video_input.cpp  sv_video_output.cpp
video_io/ffmpeg/: bs_common.h  bs_push_streamer.cpp
video_io/ffmpeg/x86_cuda/: bs_push_streamer.h  bs_video_saver.cpp  bs_video_saver.h
video_io/ffmpeg/x86_intel/: bs_common.h  bs_push_streamer.cpp  bs_push_streamer.h  bs_video_saver.cpp  bs_video_saver.h
video_io/gstreamer/: streamer_gstreamer_impl.cpp  streamer_gstreamer_impl.h  writer_gstreamer_impl.cpp  writer_gstreamer_impl.h
